# neuromeet

./: .gitignore  Cargo.toml
actix-api/: .env  Cargo.toml
actix-api/certs/: fullchain.der  fullchain.pem  lanuch_chrome.sh  privkey.key  privkey.pem
actix-api/src/webtransport/: mod.rs
types/src/protos/: aes_packet.rs  connection_packet.rs  media_packet.rs  packet_wrapper.rs  rsa_packet.rs
videocall-client/: Cargo.toml
videocall-client/src/: constants.rs  lib.rs
videocall-client/src/client/: video_call_client.rs
videocall-client/src/connection/: webtransport.rs
videocall-client/src/decode/: audio.rs  decoder_utils.rs  hash_map_with_ordered_keys.rs  mod.rs  peer_decode_manager.rs  peer_decoder.rs  video.rs  video_decoder.rs  worker_decoder.rs
videocall-client/src/encode/: camera_device.rs  camera_encoder.rs  device_state.rs  encoder_state.rs  encoder_utils.rs  microphone_encoder.rs  mod.rs  screen_encoder.rs  transform.rs
videocall-client/src/media_devices/: media_device_access.rs  mod.rs
videocall-client/src/utils/: dom.rs
videocall-client/src/workers/: agent_handler.rs  audio_worker_decoder.rs  mod.rs  packet.rs  video_worker.rs  video_worker_decoder.rs  worker_factory.rs  worker_handler.rs  worker_wrapper.rs
yew-ui/: Cargo.toml  index.html  start.sh
yew-ui/src/: app.rs  constants.rs  lib.rs  main.rs
yew-ui/src/agents/: connection_agent.rs  mod.rs  peer.rs
yew-ui/src/components/: attendants.rs  buttons.rs  device_selector.rs  host.rs  middleware.rs  mod.rs  top_bar.rs
yew-ui/src/components/icons/: mod.rs
yew-ui/src/pages/: home.rs
yew-ui/src/stores/: app_store.rs  media_store.rs  mod.rs
yew-ui/src/utils/: dom.rs
yew-ui/static/: style.css
