[package]
name = "videocall-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1"
cbc = { version = "0.1.2", features = ["alloc"] }
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.8.0"
gloo-timers = "0.2.6"
gloo-utils = "0.1"
gloo-worker = "0.5"
js-sys = "0.3.64"
log = "0.4.19"
protobuf = "3.2.0"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
rsa = "0.9.2"
types = { path= "../types"}
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.30"
yew = { version = "0.21", features = ["csr"] }
yew-websocket = "1.21.0"
yew-webtransport = "0.21.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde-wasm-bindgen = "0.5"
thiserror = "1"

web-sys = { version = "0.3.64", features = [
    "AudioTrack",
    "AudioData",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "AudioSampleFormat",
    "BaseAudioContext",
    "Document",
    "Element",
    "GainOptions",
    "GainNode",
    "HtmlElement",
    "Node", 
    "Window",
    "Clipboard",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlSelectElement",
    "LatencyMode",
    "Navigator",
    "MediaStreamAudioDestinationNode",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoFrame",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "VideoEncoderEncodeOptions",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlAudioElement",
    "AudioDataInit",
    "TransformStream",
    "OscillatorNode",
    "OscillatorType",
    "AudioParam"
    ] }

[dev-dependencies]
wasm-bindgen-test = "0.3.20"